--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "perfect-scrollbar": "^1.5.0",
     "popper.js": "1.16.0",
     "rxjs": "6.5.2",
-    "sweetalert2": "^9.7.0",
+    "sweetalert2": "^9.10.12",
+    "xlsx": "^0.1.6",
     "zone.js": "0.9.1"
   },
   "scripts": {
